@@ -1,7 +1,9 @@
 package com.hsk.cafeteria.service;
 
+import com.hsk.cafeteria.apiPayload.code.exception.BaseException;
+import com.hsk.cafeteria.apiPayload.code.status.ErrorType;
 import com.hsk.cafeteria.converter.CafeteriaConverter;
-import com.hsk.cafeteria.dto.res.CafeteriaResponse;
+import com.hsk.cafeteria.dto.res.CafeteriaRes;
 import com.hsk.cafeteria.entity.CafeteriaEntity;
 import com.hsk.cafeteria.repository.CafeteriaRepository;
 import lombok.RequiredArgsConstructor;
@@ -9,7 +11,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -17,17 +18,16 @@ import java.util.stream.Collectors;
 public class CafeteriaServicelmpl implements CafeteriaService {
     
     private final CafeteriaRepository cafeteriaRepository;
-    
-    public List<CafeteriaResponse> getAllCafeterias() {
-        return cafeteriaRepository.findAllByOrderByTypeAscNameAsc()
-                .stream()
+
+    public List<CafeteriaRes> getAllCafeterias() {
+        return cafeteriaRepository.findAllByOrderByTypeAscNameAsc().stream()
                 .map(CafeteriaConverter::from)
-                .collect(Collectors.toList());
+                .toList();
     }
     
-    public CafeteriaResponse getCafeteriaById(Long id) {
+    public CafeteriaRes getCafeteriaById(Long id) {
         CafeteriaEntity cafeteriaEntity = cafeteriaRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Cafeteria not found with id: " + id));
+                .orElseThrow(() -> new BaseException(ErrorType.NOT_FOUND_CAFETERIA_DATA));
         return CafeteriaConverter.from(cafeteriaEntity);
     }
 }
